...

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@{`Title: ` + reminderDataItem.title}"
            android:textSize="16sp"
            tools:text="Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
